[package]
authors = ["bitsong contributors"]
description = "Cosmwasm contract that always returns the same response"
edition = "2021"
name = "echo"
version = "0.1.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.16.0
"""

[dependencies]
cosmwasm-schema = "2.2.0"
cosmwasm-std    = "2.2.0"
cw-storage-plus = "2.0.0"
cosmos-sdk-proto             = { version = "0.26.1", default-features = false }
schemars = "0.8.21"
serde  = { version = "1.0.140", default-features = false, features = ["derive"] }
#serde-cw-value = "0.7.0"
thiserror = "1.0.31"
#base64-simd = "0.8.0"
btsg-auth  = { package = "btsg-auth", git = "https://github.com/permissionlessweb/bs-nfts", branch = "cosmwasm-std-v2" } 
sha2 = "0.10.8"

[dev-dependencies]
serde-json-wasm = "1.0.0"
